add unit test for FlightReaderService.Read to read from filePath, modify FlightReaderService and Flight to pass and add test json files into unit test project

--- a/HolidaySearch.Tests/HolidaySearch.Tests.csproj
+++ b/HolidaySearch.Tests/HolidaySearch.Tests.csproj
@@ -21,4 +21,14 @@
     <ProjectReference Include="..\HolidaySearch\HolidaySearch.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Services\TestDataFiles\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="Services\TestDataFiles\TestFlightData.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
