add test case for .Read on Hotel json file, modify Hotel class to pass

--- a/HolidaySearch.Tests/HolidaySearch.Tests.csproj
+++ b/HolidaySearch.Tests/HolidaySearch.Tests.csproj
@@ -30,6 +30,9 @@
     <None Update="Services\TestDataFiles\TestFlightData.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="Services\TestDataFiles\TestHotelData.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
