--- a/HolidaySearch.Tests/HolidaySearchLibrary.Tests.csproj
+++ b/HolidaySearch.Tests/HolidaySearchLibrary.Tests.csproj
@@ -19,7 +19,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\HolidaySearch\HolidaySearch.csproj" />
+    <ProjectReference Include="..\HolidaySearch\HolidaySearchLibrary.csproj" />
   </ItemGroup>
 
   <ItemGroup>
