rename folders [HolidaySearch] -> [HolidaySearchLibrary] and [HolidaySearch.Tests] -> [HolidaySearchLibrary.Tests]

--- a/HolidaySearchLibrary.Tests/HolidaySearchLibrary.Tests.csproj
+++ b/HolidaySearchLibrary.Tests/HolidaySearchLibrary.Tests.csproj
@@ -19,7 +19,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\HolidaySearch\HolidaySearchLibrary.csproj" />
+    <ProjectReference Include="..\HolidaySearchLibrary\HolidaySearchLibrary.csproj" />
   </ItemGroup>
 
   <ItemGroup>
