rename folder [dataFiles] -> [JsonFiles] and filenames capitalisation

--- a/HolidaySearchLibrary/HolidaySearchLibrary.csproj
+++ b/HolidaySearchLibrary/HolidaySearchLibrary.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Library</OutputType>
@@ -8,10 +8,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Update="dataFiles\flightData.json">
+    <None Update="JsonFiles\FlightData.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Update="dataFiles\hotelData.json">
+    <None Update="JsonFiles\HotelData.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
